language/move-prover/tests/sources/functional/specs_in_fun.exp
Move prover returns: exiting with boogie verification errors
error:  This assertion might not hold.

    ┌── tests/sources/functional/specs_in_fun.move:45:13 ───
    │
 45 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:42:5: simple1_incorrect (entry)
    =     at tests/sources/functional/specs_in_fun.move:43:9: simple1_incorrect

error:  This assertion might not hold.

    ┌── tests/sources/functional/specs_in_fun.move:53:13 ───
    │
 53 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:49:5: simple2_incorrect (entry)
    =     at tests/sources/functional/specs_in_fun.move:51:15: simple2_incorrect
    =         y = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:53:13: simple2_incorrect

error:  This assertion might not hold.

    ┌── tests/sources/functional/specs_in_fun.move:60:13 ───
    │
 60 │             assert x > y;
    │             ^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:57:5: simple3_incorrect (entry)

error:  This assertion might not hold.

    ┌── tests/sources/functional/specs_in_fun.move:69:13 ───
    │
 69 │             assert z > 2*x;
    │             ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:64:5: simple4_incorrect (entry)
    =     at tests/sources/functional/specs_in_fun.move:66:15: simple4_incorrect
    =         z = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:68:13: simple4_incorrect
